CS35200/project1/y.output
Terminals unused in grammar

   PLUS_PLUS


State 68 conflicts: 12 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 12 shift/reduce
State 77 conflicts: 12 shift/reduce
State 94 conflicts: 1 shift/reduce
State 113 conflicts: 12 shift/reduce
State 130 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: MainClass ClassDeclList

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    3 ClassDeclList: %empty
    4              | ClassDecl ClassDeclList

    5 ClassDecl: CLASS ID OptionalExtends OPEN_CURLY VarDeclList MethodDeclList CLOSED_CURLY

    6 OptionalExtends: %empty
    7                | EXTENDS ID

    8 VarDeclList: %empty
    9            | VarDeclList VarDecl

   10 MethodDeclList: %empty
   11               | MethodDecl MethodDeclList

   12 VarDecl: Type ID VarInit VarDeclTail SEMICOLON

   13 VarInit: %empty
   14        | EQUALS Exp

   15 VarDeclTail: %empty
   16            | COMMA ID VarInit VarDeclTail

   17 MethodDecl: Type ID OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY
   18           | PUBLIC Type ID OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

   19 OptionalFormatList: %empty
   20                   | FormalList

   21 FormalList: Type ID FormalsTail

   22 FormalsTail: %empty
   23            | COMMA Type ID FormalsTail

   24 PrimeType: INT
   25          | BOOLEAN
   26          | STRING

   27 Type: PrimeType
   28     | ID
   29     | Type OPEN_BRACKET CLOSED_BRACKET

   30 StatementList: %empty
   31              | Statement StatementList

   32 Statement: VarDecl
   33          | OPEN_CURLY StatementList CLOSED_CURLY
   34          | IF OPEN_PARENTHESES Exp CLOSED_PARENTHESES Statement ELSE Statement
   35          | WHILE OPEN_PARENTHESES Exp CLOSED_PARENTHESES Statement
   36          | SYSTEM_OUT_PRINTLN OPEN_PARENTHESES Exp CLOSED_PARENTHESES SEMICOLON
   37          | SYSTEM_OUT_PRINT OPEN_PARENTHESES Exp CLOSED_PARENTHESES SEMICOLON
   38          | LeftValue EQUALS Exp SEMICOLON
   39          | ID EQUALS Exp SEMICOLON
   40          | RETURN Exp SEMICOLON
   41          | MethodCall SEMICOLON

   42 MethodCall: LeftValue OPEN_PARENTHESES OptionalExpList CLOSED_PARENTHESES
   43           | ID OPEN_PARENTHESES OptionalExpList CLOSED_PARENTHESES

   44 OptionalExpList: %empty
   45                | ExpList

   46 Exp: Exp Op Exp
   47    | EXCLAMATION Exp
   48    | PLUS Exp
   49    | MINUS Exp
   50    | OPEN_PARENTHESES Exp CLOSED_PARENTHESES
   51    | LeftValue
   52    | LeftValue DOT LENGTH
   53    | ID
   54    | ID DOT LENGTH
   55    | INTEGER_LITERAL
   56    | STRING_LITERAL
   57    | TRUE
   58    | FALSE
   59    | MethodCall
   60    | NEW ID OPEN_PARENTHESES CLOSED_PARENTHESES
   61    | NEW PrimeType Index
   62    | NEW ID Index

   63 Op: AND
   64   | OR
   65   | LESS
   66   | GREATER
   67   | LESS_EQUAL
   68   | GREATER_EQUAL
   69   | EQUAL_EQUAL
   70   | NOT_EQUAL
   71   | PLUS
   72   | MINUS
   73   | MULTIPLY
   74   | DIVIDE

   75 Index: OPEN_BRACKET Exp CLOSED_BRACKET
   76      | Index OPEN_BRACKET Exp CLOSED_BRACKET

   77 ExpList: Exp ExpTail

   78 ExpTail: %empty
   79        | COMMA Exp ExpTail

   80 LeftValue: LeftValue Index
   81          | LeftValue DOT ID
   82          | ID Index
   83          | ID DOT ID
   84          | NEW ID OPEN_PARENTHESES CLOSED_PARENTHESES DOT ID
   85          | THIS DOT ID


Terminals, with rules where they appear

$end (0) 0
error (256)
AND (258) 63
BOOLEAN (259) 25
CLASS (260) 2 5
CLOSED_BRACKET (261) 2 29 75 76
CLOSED_CURLY (262) 2 5 17 18 33
CLOSED_PARENTHESES (263) 2 17 18 34 35 36 37 42 43 50 60 84
COMMA (264) 16 23 79
DIVIDE (265) 74
DOT (266) 52 54 81 83 84 85
ELSE (267) 34
EQUALS (268) 14 38 39
EQUAL_EQUAL (269) 69
EXCLAMATION (270) 47
EXTENDS (271) 7
FALSE (272) 58
GREATER (273) 66
GREATER_EQUAL (274) 68
ID (275) 2 5 7 12 16 17 18 21 23 28 39 43 53 54 60 62 81 82 83 84 85
IF (276) 34
INT (277) 24
INTEGER_LITERAL (278) 55
LENGTH (279) 52 54
LESS (280) 65
LESS_EQUAL (281) 67
MAIN (282) 2
MINUS (283) 49 72
MULTIPLY (284) 73
NEW (285) 60 61 62 84
NOT_EQUAL (286) 70
OPEN_BRACKET (287) 2 29 75 76
OPEN_CURLY (288) 2 5 17 18 33
OPEN_PARENTHESES (289) 2 17 18 34 35 36 37 42 43 50 60 84
OR (290) 64
PLUS (291) 48 71
PLUS_PLUS (292)
PUBLIC (293) 2 18
RETURN (294) 40
SEMICOLON (295) 12 36 37 38 39 40 41
STATIC (296) 2
STRING (297) 2 26
STRING_LITERAL (298) 56
SYSTEM_OUT_PRINT (299) 37
SYSTEM_OUT_PRINTLN (300) 36
THIS (301) 85
TRUE (302) 57
VOID (303) 2
WHILE (304) 35


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
Program (51)
    on left: 1, on right: 0
MainClass (52)
    on left: 2, on right: 1
ClassDeclList (53)
    on left: 3 4, on right: 1 4
ClassDecl (54)
    on left: 5, on right: 4
OptionalExtends (55)
    on left: 6 7, on right: 5
VarDeclList (56)
    on left: 8 9, on right: 5 9
MethodDeclList (57)
    on left: 10 11, on right: 5 11
VarDecl (58)
    on left: 12, on right: 9 32
VarInit (59)
    on left: 13 14, on right: 12 16
VarDeclTail (60)
    on left: 15 16, on right: 12 16
MethodDecl (61)
    on left: 17 18, on right: 11
OptionalFormatList (62)
    on left: 19 20, on right: 17 18
FormalList (63)
    on left: 21, on right: 20
FormalsTail (64)
    on left: 22 23, on right: 21 23
PrimeType (65)
    on left: 24 25 26, on right: 27 61
Type (66)
    on left: 27 28 29, on right: 12 17 18 21 23 29
StatementList (67)
    on left: 30 31, on right: 2 17 18 31 33
Statement (68)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 31 34 35
MethodCall (69)
    on left: 42 43, on right: 41 59
OptionalExpList (70)
    on left: 44 45, on right: 42 43
Exp (71)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62, on right:
    14 34 35 36 37 38 39 40 46 47 48 49 50 75 76 77 79
Op (72)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74, on right: 46
Index (73)
    on left: 75 76, on right: 61 62 76 80 82
ExpList (74)
    on left: 77, on right: 45
ExpTail (75)
    on left: 78 79, on right: 77 79
LeftValue (76)
    on left: 80 81 82 83 84 85, on right: 38 42 51 52 80 81


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: CLASS . ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    ID  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass . ClassDeclList

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (ClassDeclList)

    ClassDeclList  go to state 7
    ClassDecl      go to state 8


State 4

    2 MainClass: CLASS ID . OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    OPEN_CURLY  shift, and go to state 9


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    5 ClassDecl: CLASS . ID OptionalExtends OPEN_CURLY VarDeclList MethodDeclList CLOSED_CURLY

    ID  shift, and go to state 10


State 7

    1 Program: MainClass ClassDeclList .

    $default  reduce using rule 1 (Program)


State 8

    4 ClassDeclList: ClassDecl . ClassDeclList

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (ClassDeclList)

    ClassDeclList  go to state 11
    ClassDecl      go to state 8


State 9

    2 MainClass: CLASS ID OPEN_CURLY . PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    PUBLIC  shift, and go to state 12


State 10

    5 ClassDecl: CLASS ID . OptionalExtends OPEN_CURLY VarDeclList MethodDeclList CLOSED_CURLY

    EXTENDS  shift, and go to state 13

    $default  reduce using rule 6 (OptionalExtends)

    OptionalExtends  go to state 14


State 11

    4 ClassDeclList: ClassDecl ClassDeclList .

    $default  reduce using rule 4 (ClassDeclList)


State 12

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC . STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    STATIC  shift, and go to state 15


State 13

    7 OptionalExtends: EXTENDS . ID

    ID  shift, and go to state 16


State 14

    5 ClassDecl: CLASS ID OptionalExtends . OPEN_CURLY VarDeclList MethodDeclList CLOSED_CURLY

    OPEN_CURLY  shift, and go to state 17


State 15

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC . VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    VOID  shift, and go to state 18


State 16

    7 OptionalExtends: EXTENDS ID .

    $default  reduce using rule 7 (OptionalExtends)


State 17

    5 ClassDecl: CLASS ID OptionalExtends OPEN_CURLY . VarDeclList MethodDeclList CLOSED_CURLY

    $default  reduce using rule 8 (VarDeclList)

    VarDeclList  go to state 19


State 18

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID . MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    MAIN  shift, and go to state 20


State 19

    5 ClassDecl: CLASS ID OptionalExtends OPEN_CURLY VarDeclList . MethodDeclList CLOSED_CURLY
    9 VarDeclList: VarDeclList . VarDecl

    BOOLEAN  shift, and go to state 21
    ID       shift, and go to state 22
    INT      shift, and go to state 23
    PUBLIC   shift, and go to state 24
    STRING   shift, and go to state 25

    $default  reduce using rule 10 (MethodDeclList)

    MethodDeclList  go to state 26
    VarDecl         go to state 27
    MethodDecl      go to state 28
    PrimeType       go to state 29
    Type            go to state 30


State 20

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN . OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    OPEN_PARENTHESES  shift, and go to state 31


State 21

   25 PrimeType: BOOLEAN .

    $default  reduce using rule 25 (PrimeType)


State 22

   28 Type: ID .

    $default  reduce using rule 28 (Type)


State 23

   24 PrimeType: INT .

    $default  reduce using rule 24 (PrimeType)


State 24

   18 MethodDecl: PUBLIC . Type ID OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

    BOOLEAN  shift, and go to state 21
    ID       shift, and go to state 22
    INT      shift, and go to state 23
    STRING   shift, and go to state 25

    PrimeType  go to state 29
    Type       go to state 32


State 25

   26 PrimeType: STRING .

    $default  reduce using rule 26 (PrimeType)


State 26

    5 ClassDecl: CLASS ID OptionalExtends OPEN_CURLY VarDeclList MethodDeclList . CLOSED_CURLY

    CLOSED_CURLY  shift, and go to state 33


State 27

    9 VarDeclList: VarDeclList VarDecl .

    $default  reduce using rule 9 (VarDeclList)


State 28

   11 MethodDeclList: MethodDecl . MethodDeclList

    BOOLEAN  shift, and go to state 21
    ID       shift, and go to state 22
    INT      shift, and go to state 23
    PUBLIC   shift, and go to state 24
    STRING   shift, and go to state 25

    $default  reduce using rule 10 (MethodDeclList)

    MethodDeclList  go to state 34
    MethodDecl      go to state 28
    PrimeType       go to state 29
    Type            go to state 35


State 29

   27 Type: PrimeType .

    $default  reduce using rule 27 (Type)


State 30

   12 VarDecl: Type . ID VarInit VarDeclTail SEMICOLON
   17 MethodDecl: Type . ID OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY
   29 Type: Type . OPEN_BRACKET CLOSED_BRACKET

    ID            shift, and go to state 36
    OPEN_BRACKET  shift, and go to state 37


State 31

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES . STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    STRING  shift, and go to state 38


State 32

   18 MethodDecl: PUBLIC Type . ID OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY
   29 Type: Type . OPEN_BRACKET CLOSED_BRACKET

    ID            shift, and go to state 39
    OPEN_BRACKET  shift, and go to state 37


State 33

    5 ClassDecl: CLASS ID OptionalExtends OPEN_CURLY VarDeclList MethodDeclList CLOSED_CURLY .

    $default  reduce using rule 5 (ClassDecl)


State 34

   11 MethodDeclList: MethodDecl MethodDeclList .

    $default  reduce using rule 11 (MethodDeclList)


State 35

   17 MethodDecl: Type . ID OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY
   29 Type: Type . OPEN_BRACKET CLOSED_BRACKET

    ID            shift, and go to state 40
    OPEN_BRACKET  shift, and go to state 37


State 36

   12 VarDecl: Type ID . VarInit VarDeclTail SEMICOLON
   17 MethodDecl: Type ID . OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

    EQUALS            shift, and go to state 41
    OPEN_PARENTHESES  shift, and go to state 42

    $default  reduce using rule 13 (VarInit)

    VarInit  go to state 43


State 37

   29 Type: Type OPEN_BRACKET . CLOSED_BRACKET

    CLOSED_BRACKET  shift, and go to state 44


State 38

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING . OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    OPEN_BRACKET  shift, and go to state 45


State 39

   18 MethodDecl: PUBLIC Type ID . OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

    OPEN_PARENTHESES  shift, and go to state 46


State 40

   17 MethodDecl: Type ID . OPEN_PARENTHESES OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

    OPEN_PARENTHESES  shift, and go to state 42


State 41

   14 VarInit: EQUALS . Exp

    EXCLAMATION       shift, and go to state 47
    FALSE             shift, and go to state 48
    ID                shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    MINUS             shift, and go to state 51
    NEW               shift, and go to state 52
    OPEN_PARENTHESES  shift, and go to state 53
    PLUS              shift, and go to state 54
    STRING_LITERAL    shift, and go to state 55
    THIS              shift, and go to state 56
    TRUE              shift, and go to state 57

    MethodCall  go to state 58
    Exp         go to state 59
    LeftValue   go to state 60


State 42

   17 MethodDecl: Type ID OPEN_PARENTHESES . OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

    BOOLEAN  shift, and go to state 21
    ID       shift, and go to state 22
    INT      shift, and go to state 23
    STRING   shift, and go to state 25

    $default  reduce using rule 19 (OptionalFormatList)

    OptionalFormatList  go to state 61
    FormalList          go to state 62
    PrimeType           go to state 29
    Type                go to state 63


State 43

   12 VarDecl: Type ID VarInit . VarDeclTail SEMICOLON

    COMMA  shift, and go to state 64

    $default  reduce using rule 15 (VarDeclTail)

    VarDeclTail  go to state 65


State 44

   29 Type: Type OPEN_BRACKET CLOSED_BRACKET .

    $default  reduce using rule 29 (Type)


State 45

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET . CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    CLOSED_BRACKET  shift, and go to state 66


State 46

   18 MethodDecl: PUBLIC Type ID OPEN_PARENTHESES . OptionalFormatList CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

    BOOLEAN  shift, and go to state 21
    ID       shift, and go to state 22
    INT      shift, and go to state 23
    STRING   shift, and go to state 25

    $default  reduce using rule 19 (OptionalFormatList)

    OptionalFormatList  go to state 67
    FormalList          go to state 62
    PrimeType           go to state 29
    Type                go to state 63


State 47

   47 Exp: EXCLAMATION . Exp

    EXCLAMATION       shift, and go to state 47
    FALSE             shift, and go to state 48
    ID                shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    MINUS             shift, and go to state 51
    NEW               shift, and go to state 52
    OPEN_PARENTHESES  shift, and go to state 53
    PLUS              shift, and go to state 54
    STRING_LITERAL    shift, and go to state 55
    THIS              shift, and go to state 56
    TRUE              shift, and go to state 57

    MethodCall  go to state 58
    Exp         go to state 68
    LeftValue   go to state 60


State 48

   58 Exp: FALSE .

    $default  reduce using rule 58 (Exp)


State 49

   43 MethodCall: ID . OPEN_PARENTHESES OptionalExpList CLOSED_PARENTHESES
   53 Exp: ID .
   54    | ID . DOT LENGTH
   82 LeftValue: ID . Index
   83          | ID . DOT ID

    DOT               shift, and go to state 69
    OPEN_BRACKET      shift, and go to state 70
    OPEN_PARENTHESES  shift, and go to state 71

    $default  reduce using rule 53 (Exp)

    Index  go to state 72


State 50

   55 Exp: INTEGER_LITERAL .

    $default  reduce using rule 55 (Exp)


State 51

   49 Exp: MINUS . Exp

    EXCLAMATION       shift, and go to state 47
    FALSE             shift, and go to state 48
    ID                shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    MINUS             shift, and go to state 51
    NEW               shift, and go to state 52
    OPEN_PARENTHESES  shift, and go to state 53
    PLUS              shift, and go to state 54
    STRING_LITERAL    shift, and go to state 55
    THIS              shift, and go to state 56
    TRUE              shift, and go to state 57

    MethodCall  go to state 58
    Exp         go to state 73
    LeftValue   go to state 60


State 52

   60 Exp: NEW . ID OPEN_PARENTHESES CLOSED_PARENTHESES
   61    | NEW . PrimeType Index
   62    | NEW . ID Index
   84 LeftValue: NEW . ID OPEN_PARENTHESES CLOSED_PARENTHESES DOT ID

    BOOLEAN  shift, and go to state 21
    ID       shift, and go to state 74
    INT      shift, and go to state 23
    STRING   shift, and go to state 25

    PrimeType  go to state 75


State 53

   50 Exp: OPEN_PARENTHESES . Exp CLOSED_PARENTHESES

    EXCLAMATION       shift, and go to state 47
    FALSE             shift, and go to state 48
    ID                shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    MINUS             shift, and go to state 51
    NEW               shift, and go to state 52
    OPEN_PARENTHESES  shift, and go to state 53
    PLUS              shift, and go to state 54
    STRING_LITERAL    shift, and go to state 55
    THIS              shift, and go to state 56
    TRUE              shift, and go to state 57

    MethodCall  go to state 58
    Exp         go to state 76
    LeftValue   go to state 60


State 54

   48 Exp: PLUS . Exp

    EXCLAMATION       shift, and go to state 47
    FALSE             shift, and go to state 48
    ID                shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    MINUS             shift, and go to state 51
    NEW               shift, and go to state 52
    OPEN_PARENTHESES  shift, and go to state 53
    PLUS              shift, and go to state 54
    STRING_LITERAL    shift, and go to state 55
    THIS              shift, and go to state 56
    TRUE              shift, and go to state 57

    MethodCall  go to state 58
    Exp         go to state 77
    LeftValue   go to state 60


State 55

   56 Exp: STRING_LITERAL .

    $default  reduce using rule 56 (Exp)


State 56

   85 LeftValue: THIS . DOT ID

    DOT  shift, and go to state 78


State 57

   57 Exp: TRUE .

    $default  reduce using rule 57 (Exp)


State 58

   59 Exp: MethodCall .

    $default  reduce using rule 59 (Exp)


State 59

   14 VarInit: EQUALS Exp .
   46 Exp: Exp . Op Exp

    AND            shift, and go to state 79
    DIVIDE         shift, and go to state 80
    EQUAL_EQUAL    shift, and go to state 81
    GREATER        shift, and go to state 82
    GREATER_EQUAL  shift, and go to state 83
    LESS           shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    MINUS          shift, and go to state 86
    MULTIPLY       shift, and go to state 87
    NOT_EQUAL      shift, and go to state 88
    OR             shift, and go to state 89
    PLUS           shift, and go to state 90

    $default  reduce using rule 14 (VarInit)

    Op  go to state 91


State 60

   42 MethodCall: LeftValue . OPEN_PARENTHESES OptionalExpList CLOSED_PARENTHESES
   51 Exp: LeftValue .
   52    | LeftValue . DOT LENGTH
   80 LeftValue: LeftValue . Index
   81          | LeftValue . DOT ID

    DOT               shift, and go to state 92
    OPEN_BRACKET      shift, and go to state 70
    OPEN_PARENTHESES  shift, and go to state 93

    $default  reduce using rule 51 (Exp)

    Index  go to state 94


State 61

   17 MethodDecl: Type ID OPEN_PARENTHESES OptionalFormatList . CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

    CLOSED_PARENTHESES  shift, and go to state 95


State 62

   20 OptionalFormatList: FormalList .

    $default  reduce using rule 20 (OptionalFormatList)


State 63

   21 FormalList: Type . ID FormalsTail
   29 Type: Type . OPEN_BRACKET CLOSED_BRACKET

    ID            shift, and go to state 96
    OPEN_BRACKET  shift, and go to state 37


State 64

   16 VarDeclTail: COMMA . ID VarInit VarDeclTail

    ID  shift, and go to state 97


State 65

   12 VarDecl: Type ID VarInit VarDeclTail . SEMICOLON

    SEMICOLON  shift, and go to state 98


State 66

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET . ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    ID  shift, and go to state 99


State 67

   18 MethodDecl: PUBLIC Type ID OPEN_PARENTHESES OptionalFormatList . CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY

    CLOSED_PARENTHESES  shift, and go to state 100


State 68

   46 Exp: Exp . Op Exp
   47    | EXCLAMATION Exp .

    AND            shift, and go to state 79
    DIVIDE         shift, and go to state 80
    EQUAL_EQUAL    shift, and go to state 81
    GREATER        shift, and go to state 82
    GREATER_EQUAL  shift, and go to state 83
    LESS           shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    MINUS          shift, and go to state 86
    MULTIPLY       shift, and go to state 87
    NOT_EQUAL      shift, and go to state 88
    OR             shift, and go to state 89
    PLUS           shift, and go to state 90

    AND            [reduce using rule 47 (Exp)]
    DIVIDE         [reduce using rule 47 (Exp)]
    EQUAL_EQUAL    [reduce using rule 47 (Exp)]
    GREATER        [reduce using rule 47 (Exp)]
    GREATER_EQUAL  [reduce using rule 47 (Exp)]
    LESS           [reduce using rule 47 (Exp)]
    LESS_EQUAL     [reduce using rule 47 (Exp)]
    MINUS          [reduce using rule 47 (Exp)]
    MULTIPLY       [reduce using rule 47 (Exp)]
    NOT_EQUAL      [reduce using rule 47 (Exp)]
    OR             [reduce using rule 47 (Exp)]
    PLUS           [reduce using rule 47 (Exp)]
    $default       reduce using rule 47 (Exp)

    Op  go to state 91


State 69

   54 Exp: ID DOT . LENGTH
   83 LeftValue: ID DOT . ID

    ID      shift, and go to state 101
    LENGTH  shift, and go to state 102


State 70

   75 Index: OPEN_BRACKET . Exp CLOSED_BRACKET
